Update services and controllers to handle driver by ID
In this update, services and controllers have been modified to handle Driver objects using their ID instead of the full object. This change includes updates to JobFlowService and DriverService, as well as their implementations, and the corresponding controllers. Additionally, some enhancements have been made to the Driver model. The model now includes a 'mobile' property with unique constraints, and adds cascading to its 'Vehicle' relationship. Tests, diff requests and application properties were also updated accordingly.